src/objects/SPE_ScorecardSupplierMap__c.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scorecard_Supplier_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Contact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Contact1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scorecard Supplier Map (CC Contact1)</relationshipLabel>
        <relationshipName>Scorecard_Supplier_Map1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Contact2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scorecard Supplier Map (CC Contact2)</relationshipLabel>
        <relationshipName>Scorecard_Supplier_Map2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Earliest_Date__c</fullName>
        <label>Earliest Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_Param__c</fullName>
        <externalId>true</externalId>
        <label>Identifier Param</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Data__c</fullName>
        <label>Latest Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScorecardGenerator__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Scorecard Generator</label>
        <referenceTo>SPE_ScorecardGenerator__c</referenceTo>
        <relationshipLabel>Scorecard Supplier Map</relationshipLabel>
        <relationshipName>Scorecard_Supplier_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SupplierContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scorecard Supplier Map (Supplier Contact)</relationshipLabel>
        <relationshipName>Scorecard_Supplier_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scorecard Supplier Map</relationshipLabel>
        <relationshipName>Scorecard_Supplier_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Scorecard Supplier Map</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Scorecard Supplier Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard Supplier Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>